infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-body-size: '5000m'
spec:
  rules:
    - host: portal-microservices.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 3000

          - path: /api/commerce/?(.*)
            pathType: Prefix
            backend:
              service:
                name: commerce-cluster-ip-service
                port:
                  number: 3000

          - path: /api/cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-cluster-ip-service
                port:
                  number: 3000

          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-cluster-ip-service
                port:
                  number: 3000

          - path: /api/wishlist/?(.*)
            pathType: Prefix
            backend:
              service:
                name: wishlist-cluster-ip-service
                port:
                  number: 3000

          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-cluster-ip-service
                port:
                  number: 3000
